# trading_TL_2024

./: .gitignore  LICENSE  README.md
.github/workflows/: ros2_ci.yml
Matlab_app/: Book1.xlsx  app1.mlapp
example_code/: README.md  how_to_use  jsonRead.cpp  jsonWrite  jsonWrite.cpp  large_test.parquet  large_trades.json  mysqlWrite.cpp  parquetRead  parquetRead.cpp  parquetWrite  parquetWrite.cpp  readWithCache  readWithCache.cpp  sqlRead.cpp  sqlWrite  sqlWrite.cpp  test.cpp  test.parquet  trades.parquet  webSocket  webSocket.cpp
historical_data/orderbook_data/: CMakeLists.txt  main.cpp
market_data_subscription/: CMakeLists.txt  main.cpp
market_data_subscription/orderbook_subscription/: main.cpp
market_data_subscription/trade_subscription/: main.cpp
simple_order_execution/: CMakeLists.txt  main.cpp
src/action/: CMakeLists.txt  package.xml
src/action/src/: action_client.cpp  action_server.cpp
src/interfaces/: CMakeLists.txt  package.xml
src/interfaces/msg/: TemplateInfo.msg
src/service/: package.xml
src/topic/: CMakeLists.txt  package.xml
src/topic/headFile/: dataWrite.h  extractData.h
src/topic/src/: back_test.cpp  dataWrite.h  data_pull.cpp  data_storage.cpp  data_storage2.cpp  pub.cpp  strategy1.cpp  strategy2.cpp  sub.cpp
test/: extractData_test  extractData_test.cpp
